test/io/lydia/remove/nonempty_dir.chpl
// This test tries to remove a directory that still has contents
var dirname = "nonempty";
removeFile(dirname);
